# eudaq

./: CMakeLists.txt
user/: CMakeLists.txt
user/ldmx/: CMakeLists.txt
user/ldmx/misc/: example_startrun.sh  ldmx_tb_test_v1.conf  ldmx_tb_test_v1.ini
user/ldmx/module/: CMakeLists.txt
user/ldmx/module/include/: TcpCommandMaster.hh
user/ldmx/module/src/: LdmxProducer.cc  TcpCommandMaster.cc
